jena-shex/src/test/files/spec/negativeSyntax/predicate-ANON.shex
# ANON predicate
# source: turtle-syntax-bad-struct-06.ttl
<http://a.example/IssueShape> {
   [] .
}
